Positioned elements correctly. Margins and spacing are off.

--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,77 @@
 body {
   background-color: hsl(185, 75%, 39%);
   color: hsl(0, 0%, 59%);
+  font-size: 1.0em;
+  font-family: 'Kumbh Sans', sans-serif;
+  font-weight: 400;
+}
+
+strong {
+  font-size: 1.4em;
+  font-weight: 700;
+  color: hsl(229, 23%, 23%);
 }
 
 .profile-header {
   background-image: url('../images/bg-pattern-card.svg');
   width: 100%;
-  height: 40%;
+  height: 30%;
   border: 1px solid hsl(185, 75%, 39%);
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   border-bottom: 0;
 }
 
+#profile-image {
+  width: calc(100% / 3);
+  height: auto;
+  margin: auto;
+  margin-top: calc(100% / -6);
+  border: .25em solid white;
+  border-radius: 50%;
+  background: white;
+}
+
 .profile-detail {
   width: 100%;
-  height: 60%;
+  height: 70%;
+  position: relative;
   background-color: #FFFFFF;
   border: 1px solid hsl(185, 75%, 39%);
+  border-top-color: #FFFFFF;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+}
+
+.profile-name, .profile-metrics {
+  width: calc(100% / 2);
+  height: auto;
+  margin: auto;
+  text-align: center;
+}
+
+.profile-name {
+  padding-top: 1em;
+}
+
+.profile-name > li {
+  padding-top: .5em;
+}
+
+span {
+  font-size: 1.4em;
+  margin-left: .5em;
+}
+
+.profile-metrics {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: calc(100% / 3);
+  border-top: 1px solid rgba(150, 150, 150, 0.233);
 }
 
 @media (max-width: 375px) {
